--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,131 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(87, 87, 87);
+  font-size: large;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.App {
+  display: flex;
+  justify-content: center;
+}
+.todo_list_container {
+  /* border: 5px solid brown; */
+  text-align: center;
+  /* width: 600px; */
+  border-radius: 8px;
+}
+.todo_list_inner_container {
+  height: 600px;
+  /* overflow: scroll; */
+}
+.todo-list {
+  border: 1px solid rgb(105, 74, 243);
+  display: flex;
+  margin: 1px;
+  background-color: rgb(239 239 238);
+  border-radius: 10px;
+  position: relative;
+  width: 750px;
+  /* padding: 5px; */
+  margin: 10px;
+  /* box-shadow: 1px 1px 10px 1px rgb(247, 247, 247); */
+  box-sizing: border-box;
+}
+.todo_title {
+  border: 1px solid black;
+  width: 200px;
+  margin-left: 250px;
+  border-radius: 8px;
+  padding: 10px;
+  background-color: rgb(33 32 33);
+  color: aliceblue;
+}
+.todo-list li {
+  list-style: none;
+  padding: 18px;
+  text-align: start;
+  font-weight: 600;
+}
+
+.completedTask {
+  text-decoration: line-through;
+  font-weight: 600;
+}
+
+.todo-list input {
+  position: absolute;
+  top: 20px;
+  right: 50px;
+}
+.addtoTask {
+  width: 670px;
+  height: 40px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  padding-left: 20px;
+  
+}
+.edit-btn {
+  position: absolute;
+  right: 80px;
+  top: 20px;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+}
+.addtoTaskBtn {
+  height: 45px;
+  width: 45px;
+  /* font-size: larger;  */
+  position: relative;
+  top: 16px;
+  margin-left: 10px;
+  border-radius: 25px;
+  background-color: antiquewhite;
+  cursor: pointer;
+}
+
+.delete-btn {
+  position: absolute;
+  right: 15px;
+  top: 20px;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.checkbox {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  top: 20px;
+  right: 50px;
+  cursor: pointer;
+}
+
+/* Scroll Bar */
+
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(255 255 255);
+  outline: 1px solid slategrey;
 }
